--- a/.github/workflows/mdlint.yml
+++ b/.github/workflows/mdlint.yml
@@ -29,152 +29,151 @@ permissions:
 env:
   KAOS_MODULE: "[Ka0S] MDLINT"
   GH_TOKEN: ${{ secrets.KAOS_REPO_TOKEN }}
-  FILE_ERROR: ""
   KAOS_MD_CONFIG: "core/config/.markdownlint.json"
+  KAOS_PRETTIER_CONFIG: "compliance/markdown/.prettierrc.json"
   KAOS_PATH_RESUME: "audit/mdlint/"
   KAOS_REPO: "/actions-runner/_work/kaos/kaos"
   KAOS_STEP_MODULE: ""
   KAOS_CODE: ${{ github.run_id}}
-  
+  KAOS_REF_BRANCH: "main"
+
 jobs:
   job-core:
     runs-on: swarm-runners-scaleset
     steps:
       - id: repo
+        name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      # con esta parte suplimos que la imagen no disponga de la cli de GH    
+      
+      # Suplimos falta de GH CLI en imagen
       - name: Install GH CLI
         uses: ./.github/actions/install-gh-cli
 
-      - id: node
+      - id: install-node
+        name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - id: markdownlint-cli2
+
+      - id: install-tools
+        name: Install Compliance Tools
         run: |
-          npm install -g markdownlint-cli2
+            echo "Installing markdownlint-cli2 and prettier..."
+            npm install -g markdownlint-cli2 prettier
+            mkdir -p ${{ env.KAOS_PATH_RESUME }}
+
       - id: check-md
+        name: Check and Self-Heal Markdown
         env:
-          GH_TOKEN: ${{ github.token }}
+           GH_TOKEN: ${{ github.token }}
         run: |
-            # Realizamos el check del documento md 
-                # Run markdownlint with the specified files and ignore rules
-                markdownlint-cli2 ${{ github.event.inputs.kaos-files }} --config ${{ env.KAOS_MD_CONFIG }} > ${{ env.KAOS_PATH_RESUME }}${{ github.run_id }}.txt 2>&1 || true
-                # Check if exist errors in file
-                # Abre el fichero en modo lectura y lee todas las líneas
-                lines=$(cat ${{ env.KAOS_PATH_RESUME }}${{ github.run_id }}.txt)
-                # Inicializa la variable summary_value
-                summary_value=""
-                # Busca la línea que contiene "Summary:"
-                while IFS= read -r line; do
-                    if [[ "$line" == *"Summary:"* ]]; then
-                        # Extrae el número después de "Summary:"
-                        summary_value=$(echo "$line" | awk -F'Summary: ' '{print $2}' | awk '{print $1}')
-                        break
-                    fi
-                done <<< "$lines"
-                # Comprueba si el valor es cero
-                if [ "$summary_value" == "0" ]; then
-                  echo "File ${{ env.KAOS_PATH_RESUME }}${{ github.run_id }}.txt is empty and $file is content correct"
-                  KAOS_ISSUE_BODY="The ${{ env.KAOS_MODULE }} process (${{ github.event.inputs.kaos-origin }}) launch the check (${{ github.run_id }}) over file (${{ github.event.inputs.kaos-files }}) and its result has been SUCCESS. Please MERGE"
-                  gh issue comment ${{ github.event.inputs.kaos-issue-id }} -b "$KAOS_ISSUE_BODY"
-                  
-                else
-                  echo "File ${{ env.KAOS_PATH_RESUME }}${{ github.run_id }}.txt is not empty and $file is content not correct and write commit info"
-                  KAOS_ISSUE_BODY="The ${{ env.KAOS_MODULE }} process (${{ github.event.inputs.kaos-origin }}) launch the check (${{ github.run_id }}) over file (${{ github.event.inputs.kaos-files }}) and its result has been FAILED, please check and solved it"
-                  gh issue comment ${{ github.event.inputs.kaos-issue-id }} -b "$KAOS_ISSUE_BODY"
-                  
-                fi
-                echo "Uploading files to the repository..."
+            # Archivo a comprobar
+            FILE="${{ github.event.inputs.kaos-files }}"
+            FILE_NAME=$(basename "$FILE")
+            RESUME_FILE="${{ env.KAOS_PATH_RESUME }}mdlint-results-${{ github.run_id }}.txt"
+            
+            echo "Starting Compliance Check for: $FILE" > "$RESUME_FILE"
+            
+            # 1. Validación de Sintaxis (MarkdownLint) - No recuperable automáticamente
+            if ! markdownlint-cli2 "$FILE" --config "${{ env.KAOS_MD_CONFIG }}" >> "$RESUME_FILE" 2>&1; then
+              echo "❌ Syntax/Rule Error detected by MarkdownLint" >> "$RESUME_FILE"
+              
+              KAOS_ISSUE_BODY="The ${{ env.KAOS_MODULE }} process (${{ github.event.inputs.kaos-origin }}) failed. File ($FILE) has MARKDOWN VIOLATIONS that cannot be auto-fixed. Please fix manually."
+              gh issue comment ${{ github.event.inputs.kaos-issue-id }} -b "$KAOS_ISSUE_BODY"
+              exit 1
+            else
+              echo "✅ Syntax/Rule Check Passed" >> "$RESUME_FILE"
+            fi
+
+            # 2. Validación de Cumplimiento (Prettier) - Recuperable (Self-Healing)
+            if ! prettier --check "$FILE" --config "${{ env.KAOS_PRETTIER_CONFIG }}"; then
+              echo "⚠️ Compliance/Style Error detected. Attempting Self-Healing..." >> "$RESUME_FILE"
+              
+              # Self-Healing: Aplicar formato
+              if prettier --write "$FILE" --config "${{ env.KAOS_PRETTIER_CONFIG }}"; then
+                echo "✅ Self-Healing Successful: File formatted to Ka0s Standards." >> "$RESUME_FILE"
+                
+                # Commit de la corrección
                 git config --global user.name "${{ secrets.KAOS_BOT_NAME }}"
                 git config --global user.email "${{ secrets.KAOS_BOT_EMAIL }}"
-                git pull origin ${{ github.ref }} --rebase --autostash
+                git add "$FILE"
+                if ! git diff --staged --quiet; then
+                  git commit -m "[Ka0S] Self-Healing: Auto-formatting Markdown compliance for $FILE_NAME"
+                  git push origin ${{ github.ref }} --force-with-lease
+                  echo "🔄 Changes pushed to repository." >> "$RESUME_FILE"
+                fi
+                
+                KAOS_ISSUE_BODY="The ${{ env.KAOS_MODULE }} process (${{ github.event.inputs.kaos-origin }}) detected style violations in ($FILE) but successfully performed SELF-HEALING. No action required."
+                gh issue comment ${{ github.event.inputs.kaos-issue-id }} -b "$KAOS_ISSUE_BODY"
+              else
+                echo "❌ Self-Healing Failed." >> "$RESUME_FILE"
+                exit 1
+              fi
+            else
+              echo "✅ Compliance Check Passed (No changes needed)" >> "$RESUME_FILE"
+              KAOS_ISSUE_BODY="The ${{ env.KAOS_MODULE }} process (${{ github.event.inputs.kaos-origin }}) successfully validated file ($FILE). All checks passed."
+              gh issue comment ${{ github.event.inputs.kaos-issue-id }} -b "$KAOS_ISSUE_BODY"
+            fi
+            
+            cat "$RESUME_FILE"
+
+      - id: upload-logs
+        name: Upload Logs
+        if: always()
+        run: |
+             # Subir logs de auditoría si existen
+             if [ -f "${{ env.KAOS_PATH_RESUME }}mdlint-results-${{ github.run_id }}.txt" ]; then
+                git config --global user.name "${{ secrets.KAOS_BOT_NAME }}"
+                git config --global user.email "${{ secrets.KAOS_BOT_EMAIL }}"
+                git pull --rebase
                 git add ${{ env.KAOS_PATH_RESUME }}*
                 if ! git diff --staged --quiet; then
-                  git commit -m "[Ka0S] Uploading mdlint resume execution files..."
-                  for i in {1..3}; do
-                    git pull --rebase && git push origin ${{ github.ref }} --force-with-lease && break
-                    sleep $((RANDOM % 10))
-                  done
+                   git commit -m "[Ka0S] Uploading Markdown compliance audit logs"
+                   git push origin ${{ github.ref }} --force-with-lease
                 fi
+             fi
+
   handle-success:
-    runs-on: swarm-runners-scaleset
-    needs: [job-core]
-    if: ${{ success() }}
-    steps:
-      - id: repo
-        name: Checkout code
-        if: ${{ always() }}
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+     runs-on: swarm-runners-scaleset
+     needs: [job-core]
+     if: ${{ success() }}
+     steps:
+       - uses: actions/checkout@v4
+       - uses: ./.github/actions/install-gh-cli
+       - name: Notify Success
+         env:
+           GH_TOKEN: ${{ github.token }}
+         run: |
+           RNNUMBER=$(echo "${{ github.ref }}" | grep -o '[0-9]*')
+           gh issue comment $RNNUMBER --body "✅ Markdown Compliance finalizado correctamente ${{ env.KAOS_CODE }}."
 
-      # con esta parte suplimos que la imagen no disponga de la cli de GH    
-      - name: Install GH CLI
-        uses: ./.github/actions/install-gh-cli
-
-      - id: handle-success-execution
-        name: handle-success-execution
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: |
-          # Si todo ha ido correcto añadimos el contenido del fichero 
-          RNNUMBER=$(echo "${{ github.ref }}" | grep -o '[0-9]*')
-          gh issue comment $RNNUMBER --body "El proceso ha finalizado correctamente ${{ env.KAOS_CODE }}. El resultado está en el fichero ${{ env.KAOS_CODE }}.log"
   handle_failure:
     runs-on: swarm-runners-scaleset
     needs: [job-core, handle-success]
     if: ${{ failure() }} 
     steps:
-      - id: repo
-        name: Checkout code
-        if: ${{ always() }}
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      # con esta parte suplimos que la imagen no disponga de la cli de GH    
-      - name: Install GH CLI
-        uses: ./.github/actions/install-gh-cli
-
-      - id: handle-failure-execution
-        name: handle-failure-execution
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/install-gh-cli
+      - name: Notify Failure
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          echo "Error detected in process"
-          echo "Created issue"
-          gh issue create  --title "${{ env.KAOS_MODULE }} Error detected in ${{ env.KAOS_CODE }}" --label "bug" --body "Please check the logs 'https://github.com/Ka0s-Klaus/ka0s/actions/runs/${{ env.KAOS_CODE }}' for more information of error."
-          echo "Add comment to origin target"
+          gh issue create --title "${{ env.KAOS_MODULE }} Error in ${{ env.KAOS_CODE }}" --label "bug" --body "Check logs: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           RNNUMBER=$(echo "${{ github.ref }}" | grep -o '[0-9]*')
-          gh issue comment $RNNUMBER --body "El proceso no ha finalizado correctamente ${{ env.KAOS_CODE }}. El resultado está en el fichero ${{ env.KAOS_CODE }}.log"
+          gh issue comment $RNNUMBER --body "❌ El proceso de Compliance Markdown ha fallado ${{ env.KAOS_CODE }}."
+
   end-workflow:
     runs-on: swarm-runners-scaleset
     needs: [job-core, handle-success, handle_failure]
     if: ${{ always() }} 
-    env:
-        GH_TOKEN: ${{ github.token }}
     steps:
-      - id: repo
-        name: Checkout code
-        if: ${{ always() }}
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      # con esta parte suplimos que la imagen no disponga de la cli de GH    
-      - name: Install GH CLI
-        uses: ./.github/actions/install-gh-cli
-
-      - id: end-process
-        name: Finaliza el workflow
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/install-gh-cli
+      - name: End Workflow
         env:
-          GH_TOKEN: ${{ github.token }}
+            GH_TOKEN: ${{ github.token }}
         run: |
-          echo "End process"
           RNNUMBER=$(echo "${{ github.ref }}" | grep -o '[0-9]*')
-          gh issue comment $RNNUMBER --body "Se finaliza Ka0s ${{ env.KAOS_CODE }}"
           gh workflow run inspector.yml --ref 'main' -f kaos-issue-id=$RNNUMBER -f kaos-workflow-id="${{ env.KAOS_CODE }}" -f kaos-user-start=""
